--- a/Q-Search_baidu.conf
+++ b/Q-Search_baidu.conf
@@ -1,2 +1,2 @@
 #     xxx （无指令默认为 Google）
-^https:\/\/duckduckgo.com\/\?q=([^&]+).+ url 302 https://www.google.com/search?q=$1
+^https:\/\/google.com\/\?q=([^&]+).+ url 302 https://www.baidu.com/?q=$1
